--- a/index.html
+++ b/index.html
@@ -36,9 +36,47 @@
               <input type="button" class="element__like"></input>
             </div>
           </li>
+          <li class="element">
+            <img class="element__photo" src="./images/elbrus.jpg" alt="фото Эльбруса">
+            <div class="element__title-container">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <input type="button" class="element__like"></input>
+            </div>
+          </li>
+          <li class="element">
+            <img class="element__photo" src="./images/dombay.jpg" alt="фото Домбая">
+            <div class="element__title-container">
+              <h2 class="element__title">Домбай</h2>
+              <input type="button" class="element__like"></input>
+            </div>
+          </li>
+          <li class="element">
+            <img class="element__photo" src="./images/elbrus.jpg" alt="фото Эльбруса">
+            <div class="element__title-container">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <input type="button" class="element__like"></input>
+            </div>
+          </li>
+          <li class="element">
+            <img class="element__photo" src="./images/dombay.jpg" alt="фото Домбая">
+            <div class="element__title-container">
+              <h2 class="element__title">Домбай</h2>
+              <input type="button" class="element__like"></input>
+            </div>
+          </li>
+          <li class="element">
+            <img class="element__photo" src="./images/karachaevsk.jpeg" alt="фото Карачаевска">
+            <div class="element__title-container">
+              <h2 class="element__title">Карачаевск</h2>
+              <input type="button" class="element__like"></input>
+            </div>
+          </li>
         </ul>
       </section>
     </main>
+    <footer class="footer">
+      <p class="footer__content">&#169; 2022 Mesto Russia</p>
+    </footer>
   </div>
 </body>
 </html>
