--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <meta name="keywords" content="места России, города России, путешествие по России">
   <meta name="author" content="Анна Пантелеева">
@@ -17,18 +16,18 @@
     </header>
     <main class="main">
       <section class="profile">
-        <div class="avatar"></div>
+        <div class="profile__avatar"></div>
         <div class="profile__info">
           <div class="profile__first-line">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit"></button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__job">Исследователь океана</p>
         </div>
         <button type="button" class="profile__add"></button>
       </section>
       <section class="elements">
-        <ul class="element__list">
+        <ul class="elements__list">
           <li class="element">
             <img class="element__photo" src="./images/karachaevsk.jpeg" alt="фото Карачаевска">
             <div class="element__title-container">
@@ -67,7 +66,7 @@
           <li class="element">
             <img class="element__photo" src="./images/karachaevsk.jpeg" alt="фото Карачаевска">
             <div class="element__title-container">
-              <h2 class="element__title">Карачаевск</h2>
+              <h2 class="element__title">Карачаево-Черкессия</h2>
               <input type="button" class="element__like"></input>
             </div>
           </li>
@@ -77,6 +76,21 @@
     <footer class="footer">
       <p class="footer__content">&#169; 2022 Mesto Russia</p>
     </footer>
+
+    <section class="popup">
+      <form action="" class="popup__container">
+        <button type="button" class="popup__close"></button>
+        <div class="popup__wrapper">
+          <h2 class="popup__definition">Редактировать профиль</h2>
+          <input type="text" name="Имя" value="" class="popup__text popup__text_name">
+          <input type="text" name="Работа" value="" class="popup__text popup__text_job">
+          <button type="submit" class="popup__save"></button>
+        </div>
+      </form>
+    </section>
   </div>
+
+  <script src="./scripts/index.js"></script>
+
 </body>
 </html>
