--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@
             <img class="element__photo" src="./images/karachaevsk.jpeg" alt="фото Карачаевска">
             <div class="element__title-container">
               <h2 class="element__title">Карачаевск</h2>
-              <input type="button" class="element__like">
+              <button type="button" class="element__like"></button> 
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/elbrus.jpg" alt="фото Эльбруса">
             <div class="element__title-container">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <input type="button" class="element__like">
+              <button type="button" class="element__like"></button> 
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/dombay.jpg" alt="фото Домбая">
             <div class="element__title-container">
               <h2 class="element__title">Домбай</h2>
-              <input type="button" class="element__like">
+              <button type="button" class="element__like"></button> 
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/elbrus.jpg" alt="фото Эльбруса">
             <div class="element__title-container">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <input type="button" class="element__like">
+              <button type="button" class="element__like"></button> 
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/dombay.jpg" alt="фото Домбая">
             <div class="element__title-container">
               <h2 class="element__title">Домбай</h2>
-              <input type="button" class="element__like">
+              <button type="button" class="element__like"></button> 
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/karachaevsk.jpeg" alt="фото Карачаевска">
             <div class="element__title-container">
               <h2 class="element__title">Карачаево-Черкессия</h2>
-              <input type="button" class="element__like">
+              <button type="button" class="element__like"></button> 
             </div>
           </li>
         </ul>
@@ -78,7 +78,7 @@
     </footer>
 
     <section class="popup">
-      <form action="" class="popup__container">
+      <form action="./scripts/index.js" class="popup__container">
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
           <h2 class="popup__definition">Редактировать профиль</h2>
