fix mistakes after 1st review

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     </footer>
 
     <section class="popup">
-      <form action="./scripts/index.js" class="popup__container">
+      <form name="Popup" class="popup__container">
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
           <h2 class="popup__definition">Редактировать профиль</h2>
-          <input type="text" name="Имя" value="" class="popup__text popup__text_name">
-          <input type="text" name="Работа" value="" class="popup__text popup__text_job">
+          <input type="text" name="Name" class="popup__text popup__text_value_name">
+          <input type="text" name="Job" class="popup__text popup__text_value_job">
           <button type="submit" class="popup__save"></button>
         </div>
       </form>
