--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button type="button" class="element__trash"></button>
             <img class="element__photo" src="#" alt="фото">
             <div class="element__title-container">
-              <h2 class="element__title">Название</h2>
+              <p class="element__title">Название</p>
               <button type="button" class="element__like"></button> 
             </div>
           </li>
