--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <template id="element">
           <li class="element">
             <button type="button" class="element__trash"></button>
-            <img class="element__photo" src="#" alt="фото">
+            <img class="element__photo" src="#" alt="#">
             <div class="element__title-container">
               <h2 class="element__title">Название</h2>
               <button type="button" class="element__like"></button> 
@@ -78,6 +78,7 @@
     </div>
   </div>
 
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
 
 </body>
