--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
     </div>
   </div>
 
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validation.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 
 </body>
 </html>
