fix: after review 1

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </footer>
 
     <div class="popup popup_edit">
-      <form name="popup-edit" class="popup__container popup__container_edit" novalidate>
+      <form name="popup-edit" id="popup-edit" class="popup__container popup__container_edit" novalidate>
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
           <h2 class="popup__definition">Редактировать профиль</h2>
@@ -60,7 +60,7 @@
     </div>
 
     <div class="popup popup_add">
-      <form name="popup-add" class="popup__container popup__container_add" novalidate>
+      <form name="popup-add" id="popup-add" class="popup__container popup__container_add" novalidate>
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
           <h2 class="popup__definition">Новое место</h2>
