--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,9 @@
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
           <h2 class="popup__definition">Редактировать профиль</h2>
-          <input id="name-input" type="text" name="name" class="popup__text popup__text_value_name" minlength="2" maxlength="40" required>
+          <input id="name-input" type="text" name="name" class="popup__text popup__text_value_name" placeholder="Имя" minlength="2" maxlength="40" required>
           <span class="popup__text-error name-input-error"></span>
-          <input id="job-input" type="text" name="job" class="popup__text popup__text_value_job" minlength="2" maxlength="200" required>
+          <input id="job-input" type="text" name="job" class="popup__text popup__text_value_job" placeholder="Род деятельности" minlength="2" maxlength="200" required>
           <span class="popup__text-error job-input-error"></span>
           <button type="submit" class="popup__submit">Сохранить</button>
         </div>
