--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
           <h2 class="popup__definition">Новое место</h2>
-          <input id="place-input" type="text" name="place" class="popup__text popup__text_value_place" placeholder="Название" minlength="2" maxlength="30" required>
+          <input id="place-input" type="text" name="name" class="popup__text popup__text_value_place" placeholder="Название" minlength="2" maxlength="30" required>
           <span class="popup__text-error place-input-error"></span>
           <input id="link-input" type="url" name="link" class="popup__text popup__text_value_link" placeholder="Ссылка на картинку" required>
           <span class="popup__text-error link-input-error"></span>
