пункт 4 стилизовала счетчик лайков

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,10 @@
             <img class="element__photo" src="#" alt="#">
             <div class="element__title-container">
               <h2 class="element__title">Название</h2>
-              <button type="button" class="element__like"></button> 
+              <div class="element__column">
+                <button type="button" class="element__like"></button> 
+                <p class="element__counter">1</p>
+              </div>
             </div>
           </li>
           </template>
