--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
               <h2 class="element__title">Название</h2>
               <div class="element__column">
                 <button type="button" class="element__like"></button> 
-                <p class="element__counter">1</p>
+                <p class="element__counter"></p>
               </div>
             </div>
           </li>
