--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,16 @@
       </form>
     </div>
 
+    <div class="popup popup_delete">
+      <form action="" class="popup__container">
+        <button type="button" class="popup__close"></button>
+        <div class="popup__wrapper">
+          <h2 class="popup__definition">Вы уверены?</h2>
+          <button type="submit" class="popup__submit popup__submit-add">Да</button>
+        </div>
+      </form>
+    </div>
+
     <div class="popup popup_image">
       <div class="popup__image-container">
         <button type="button" class="popup__close"></button>
