пункт 7, сделала стилистику, не работает сабмитпопапа удаления

--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
       <form action="" class="popup__container">
         <button type="button" class="popup__close"></button>
         <div class="popup__wrapper">
-          <h2 class="popup__definition">Вы уверены?</h2>
-          <button type="submit" class="popup__submit popup__submit-add">Да</button>
+          <h2 class="popup__definition popup__definition_delete">Вы уверены?</h2>
+          <button type="submit" class="popup__submit popup__submit_delete">Да</button>
         </div>
       </form>
     </div>
