--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
     </header>
     <main class="main">
       <section class="profile">
-        <div class="profile__avatar"></div>
+        <div class="profile__avatar-wrapper">
+          <div class="profile__avatar"></div>
+          <div class="profile__edit-avatar"></div> 
+        </div> 
         <div class="profile__info">
           <div class="profile__first-line">
             <h1 class="profile__name"></h1>
