--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
         <div class="popup__wrapper">
           <h2 class="popup__definition">Обновить аватар</h2>
           <input id="avatar-input" type="url" name="avatar" class="popup__text popup__text_value_avatar popup__text_type_edit-avatar" placeholder="Ссылка на картинку" required>
-          <!-- <span class="popup__text-error link-input-error"></span> -->
+          <span class="popup__text-error avatar-input-error"></span>
           <button type="submit" class="popup__submit">Сохранить</button>
         </div>
       </form>
